apps/base/dns/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: dns
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: docker.io/pihole/pihole:2025.04.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 53
          protocol: TCP
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            memory: "1Gi"
            cpu: 2
          requests:
            memory: "128Mi"
            cpu: "100m"
        securityContext:
          capabilities:
            add:
              - CAP_NET_BIND_SERVICE
              - CAP_SYS_NICE
              - CAP_CHOWN
              - CAP_SYS_TIME
            drop:
              - ALL
        volumeMounts:
        - name: pihole-adlists
          mountPath: /etc/pihole/adlists.list
          subPath: adlists.list
      volumes:
        - name: pihole-adlists
          configMap:
            name: pihole-adlists-configmap

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound
  namespace: dns
  labels:
    app: unbound
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unbound
  template:
    metadata:
      labels:
        app: unbound
    spec:
      containers:
      - name: unbound
        image: docker.io/klutchell/unbound:1.22.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
        resources:
          limits:
            memory: "300Mi"
            cpu: "500m"
          requests:
            memory: "50Mi"
            cpu: "250m"
        volumeMounts:
        - name: unbound-config-volume
          mountPath: /etc/unbound/custom.conf.d/pihole.conf
          subPath: pihole.conf
      volumes:
      - name: unbound-config-volume
        configMap:
          name: unbound-configmap
