apps/base/dns/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc
  namespace: dns
  annotations:
    # NOTE: Change this IP to match an IP in the ippool
    "lbipam.cilium.io/ips": "192.168.1.53"
spec:
  selector:
    app: pihole
  ports:
    - name: 53-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: 53-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: pihole-dashboard
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer

# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: unbound-sv
#   namespace: dns
# spec:
#   selector:
#     app: unbound
#   ports:
#     - name: 53-udp
#       port: 53
#       targetPort: 53
#       protocol: UDP
#     - name: 53-tcp
#       port: 53
#       targetPort: 53
#       protocol: TCP
