apps/base/dns/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-https-route
  namespace: dns
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal-https-gateway
      namespace: default
  hostnames:
    - pihole.internal.leomercier.dev
  rules:
    - backendRefs:
        - name: pihole-svc
          port: 80
